# MCP_Data_Analyst

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Data_Analytic_Lookup.ipynb  OUTSTANDING.md  README.md  pyproject.toml  pyrightconfig.json  test_tier2.ipynb  test_tier3.ipynb  verify_output_paths.py  verify_tool_docstrings.py
.github/workflows/: ci.yml  release.yml
AutoViz_Plots/AutoViz/: cat_var_plots.html  distplots_nums.html  heatmaps.html  violinplots.html
install/: run_server.bat  uninstall.bat
servers/data_advanced/: _adv_charts.py  _adv_dashboard.py  _adv_eda.py  _adv_gencharts.py  _adv_helpers.py  _adv_profile.py  engine.py  pyproject.toml  server.py
servers/data_basic/: _patch_ops.py  engine.py  pyproject.toml  server.py
servers/data_ingest/: engine.py  server.py
servers/data_medium/: _med_analysis.py  _med_helpers.py  _med_inspect.py  _med_report.py  _med_transform.py  engine.py  pyproject.toml  server.py
servers/data_project/: engine.py  pyproject.toml  server.py
servers/data_statistics/: _stats_comparative.py  _stats_regression.py  _stats_tests.py  engine.py  pyproject.toml  server.py
servers/data_transform/: engine.py  pyproject.toml  server.py
servers/data_visual/: _adv_customize.py  engine.py  pyproject.toml  server.py
servers/data_workspace/: engine.py  pyproject.toml  server.py
shared/: column_utils.py  file_utils.py  handover.py  html_layout.py  html_theme.py  patch_validator.py  platform_utils.py  progress.py  project_utils.py  receipt.py  version_control.py  workspace_utils.py
test_workspace_t2/: export.csv  export.json  filtered.csv  head.csv  large_dataset.csv  large_dataset_auto_profile.html  sampled.csv  test_auto_profile.csv  test_auto_profile_auto_profile.html
tests/: conftest.py  test_engine_advanced.py  test_engine_basic.py  test_engine_ingest.py  test_engine_medium.py  test_engine_project.py  test_engine_statistics.py  test_engine_transform.py  test_shared.py  test_workspace.py  test_workspace_server.py  verify_output_paths.py  verify_tool_docstrings.py
tests/fixtures/: large.csv  messy.csv  simple.csv
