[project]
name = "mcp-data-analyst"
version = "0.1.0"
description = "Local-first MCP server for data analytics"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.2",
    "geopandas>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
data-analyst-basic = "servers.data_basic.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["shared", "servers/data_basic"]
omit = ["tests/*"]

[tool.ruff]
exclude = [".venv", "**/.venv/**"]

[tool.ruff.lint]
ignore = ["E402", "F401"]

[tool.uv]
required-version = ">=0.5"
