[project]
name = "mcp-data-analyst"
version = "0.2.0"
description = "Local-first MCP server for data analytics"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "geopandas>=1.0",
    "plotly>=5.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "openpyxl>=3.1",
    "odfpy>=1.4",
    "pyarrow>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "pyright>=1.1",
]

[project.scripts]
data-analyst-basic = "servers.data_basic.server:main"
data-analyst-ingest = "servers.data_ingest.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["shared", "servers/data_basic", "servers/data_ingest"]
omit = ["tests/*"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", "**/.venv/**", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E402", "E501", "F401", "F841"]

[tool.uv]
required-version = ">=0.5"
