[project]
name = "data-advanced"
version = "0.1.0"
description = "MCP Tier 3 — profiling reports, charts, dashboards"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.2",
    "plotly>=5.0",
    "geopandas>=1.0",
    "ydata-profiling>=4.8",
    "sweetviz>=2.0",
    "autoviz>=0.1",
    "streamlit>=1.0",
    "psutil>=5.0",
]

[project.scripts]
data-analyst-advanced = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"
