[project]
name = "data-advanced"
version = "0.1.0"
description = "MCP Tier 3 — fast EDA, charts, dashboards"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.2",
    "plotly>=5.0",
    "geopandas>=1.0",
    "streamlit>=1.0",
]

[project.scripts]
data-analyst-advanced = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.uv]
python = "3.12"
