[project]
name = "data-basic"
version = "0.1.0"
description = "MCP Tier 1 — basic data loading and patching tools"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.2",
    "geopandas>=1.0",
]

[project.scripts]
data-analyst-basic = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
