[project]
name = "data-medium"
version = "0.1.0"
description = "MCP Tier 2 — profiling, cleaning pipelines, aggregations"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.2",
    "geopandas>=1.0",
    "plotly>=5.0",
    "scipy>=1.10",
]

[project.scripts]
data-analyst-medium = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"
