[project]
name = "data-statistics"
version = "0.1.0"
description = "MCP T3 — statistics suite: regression, tests, time series, cohorts"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "plotly>=5.0",
]

[project.scripts]
data-analyst-statistics = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"
