[project]
name = "data-transform"
version = "0.1.0"
description = "MCP T2 — filter, reshape, aggregate, impute, feature engineering"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "geopandas>=1.0",
    "scipy>=1.10",
]

[project.scripts]
data-analyst-transform = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"
