[project]
name = "data-visual"
version = "0.1.0"
description = "MCP T3 — EDA, dashboards, charts, geo maps, customization"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "plotly>=5.0",
    "geopandas>=1.0",
    "scipy>=1.10",
]

[project.scripts]
data-analyst-visual = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"
