[project]
name = "data-workspace"
version = "0.1.0"
description = "MCP T0 — workspace management, file aliases, pipeline templates"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
]

[project.scripts]
data-analyst-workspace = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
python = "3.12"
